# dfpretty

./: PUBLISHING.md  README.md  pyproject.toml
dfpretty/: __init__.py  _html.py  core.py  themes.py
tests/: test_pretty.py
