[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dfpretty"
version = "0.1.0"
description = "Pretty-print pandas DataFrames as styled interactive HTML tables in your browser"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
keywords = ["pandas", "dataframe", "visualization", "html", "jupyter"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
  "pandas>=1.5",
]

[project.optional-dependencies]
dev = [
  "pytest>=7",
  "pytest-cov",
  "ruff",
  "build",
  "twine",
]

[project.urls]
Homepage    = "https://github.com/YOUR_USERNAME/dfpretty"
Repository  = "https://github.com/YOUR_USERNAME/dfpretty"
"Bug Tracker" = "https://github.com/YOUR_USERNAME/dfpretty/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["dfpretty*"]

[tool.ruff]
line-length = 88
target-version = "py39"
